--- a/views/opis_naprave.html
+++ b/views/opis_naprave.html
@@ -19,12 +19,21 @@
                 <label class="label">Inventarna št</label>
             </div>
         </div>
-        <div class="column is-2">
+        <div class="column is-3">
             <div class="field-body has-addons">
-                <p class="control"><input class="input" type="text" name="inventarna"></p>
+                <div class="field has-addons">
+                    <p class="control">
+                        <a class="button is-static">
+                        74600
+                        </a>
+                    </p>
+                    <p class="control">
+                        <input class="input" type="text" name="inventarna">
+                    </p>
+                </div>
             </div>
         </div>
-        <div class="column">
+        <div class="column ">
             <input class="button is-primary is-large" type="submit" value="Prikaži podatke"></input>
         </div>
     </div>
