--- a/views/prevzem.html
+++ b/views/prevzem.html
@@ -50,9 +50,18 @@
                 <label class="label">Inventarna št</label>
             </div>
         </div>
-        <div class="column is-2">
+        <div class="column is-3">
             <div class="field-body has-addons">
-                <p class="control"><input class="input" type="text" name="inventarna" value="{{inventarna}}"></p>
+                <div class="field has-addons">
+                    <p class="control">
+                        <a class="button is-static">
+                        74600
+                        </a>
+                    </p>
+                    <p class="control">
+                        <input class="input" type="text" name="inventarna" value="{{inventarna}}">
+                    </p>
+                </div>
             </div>
         </div>
         <div class="column">
