--- a/views/nedokoncani.html
+++ b/views/nedokoncani.html
@@ -37,13 +37,20 @@
                 <th>
                     <p class="has-text-centered">Servis</p>
                 </th>
-                <th>
-                    <p class="has-text-centered">Opombe</p>
-                </th>
             </tr>
           </thead>
           <tbody>
-
+            % for ena in vse_naprave:
+            <tr>
+                <td>{{ena[0]}}</td>
+                <td>{{ena[1]}}</td>
+                <td>{{ena[2]}}</td>
+                <td>{{ena[3]}}</td>
+                <td>{{ena[4]}}</td>
+                <td>{{ena[5]}}</td>
+                <td>{{ena[6]}}</td>
+            </tr>
+            %end
           </tbody>
     </table>
   </div>
