--- a/views/na_servisu.html
+++ b/views/na_servisu.html
@@ -4,7 +4,7 @@
     <div class="hero-body">
         <div class="container has-text-centered">
             <h1 class="title is-1">
-                Servis naprav
+                Naprave na servisu
             </h1>
         </div>
     </div>
