--- a/views/zacetna_stran.html
+++ b/views/zacetna_stran.html
@@ -11,7 +11,7 @@
 
 <div class="container">
     <div class="buttons are-large">
-        <a href="/nova-oprema/" class="button is-primary">Dodaj novo opremo<a>
+        <a href="/nova-oprema/" class="button is-primary">Dodaj novo napravo<a>
         <a href="/opis-naprave/" class="button is-primary">Opis naprave</a>
         <a href="/izpisi/" class="button is-primary">Izpis</a>
     </div>
@@ -32,6 +32,6 @@
     <div class="buttons are-large">
         <a href="/odtujen/" class="button is-primary">Odtujen</a>
         <button class="button">Postopek odpisa</button>
-        <a href="/odpis/" class="button is-primary">Odpis</a>
+        <a href="/odpis/" class="button">Odpis</a>
     </div>
 </div>
