--- a/views/osnova.html
+++ b/views/osnova.html
@@ -7,6 +7,11 @@
     <title>Servis naprav</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <style>
+        html, body{
+                background-color: rgb(192, 240, 225);
+            }
+    </style>
 </head>
 
 <body>
