Dodan gumb za spremembe, izpisi napak pri opisu

--- a/views/zacetna_stran.html
+++ b/views/zacetna_stran.html
@@ -14,6 +14,7 @@
         <a href="/nova-oprema/" class="button is-primary">Dodaj novo napravo<a>
         <a href="/opis-naprave/" class="button is-primary">Opis naprave</a>
         <a href="/izpisi/" class="button is-primary">Izpis</a>
+        <a href="/sprememba-podatka/" class="button">Sprememba podatka</a>
     </div>
 
     <div class="buttons are-large">
