--- a/views/opis_naprave.html
+++ b/views/opis_naprave.html
@@ -11,6 +11,36 @@
 </section>
 <a href="/" class="button is-primary is-large">Nazaj</a>
 
+%if napaka:
+<div class="modal is-active" id='pop_up'>
+    <div class="modal-background"></div>
+    <div class="modal-content">
+        <div class="column is-7 is-offset-3">
+            <div class="box">
+                <div class="content">
+                    <p>
+                    <strong>Ups!</strong>
+                    <br>
+                    {{napaka}}
+                    </p>
+                </div>
+                <div>
+                    <button class="button is-success" id='zapri'>Ok</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
+<script>
+    var pop_up = document.querySelector('#pop_up')
+    var zapri = document.querySelector('#zapri')
+    zapri.addEventListener('click', function(){
+        pop_up.classList.remove('is-active')
+    });
+</script>
+%end
+
 <form method="POST">
 
     <div class="columns is-gapless is-vcentered">
@@ -28,7 +58,7 @@
                         </a>
                     </p>
                     <p class="control">
-                        <input class="input" type="text" name="inventarna">
+                        <input class="input" type="text" name="inventarna", value="{{inventarna}}">
                     </p>
                 </div>
             </div>
@@ -39,7 +69,7 @@
     </div>
 </form>
 
-%if inventarna:
+%if inventarna and not napaka:
 
 <div class="field is-horizontal">
     <div class="field-label">
