Dodane opombe pri vrnitvni naprave

--- a/views/opis_naprave.html
+++ b/views/opis_naprave.html
@@ -238,6 +238,9 @@
                     <p class="has-text-centered">Datum vrnitve</p>
                 </th>
                 <th>
+                    <p class="has-text-centered">Opis napake</p>
+                </th>
+                <th>
                     <p class="has-text-centered">Opombe</p>
                 </th>
             </tr>
@@ -250,6 +253,7 @@
                 <td>{{popravilo['sprejem']}}</td>
                 <td>{{popravilo['vrnitev']}}</td>
                 <td>{{popravilo['opis']}}</td>
+                <td>{{popravilo['opombe']}}</td>
             </tr>
             % end
         </tbody>
