--- a/views/vrnitev.html
+++ b/views/vrnitev.html
@@ -107,7 +107,7 @@
                 <label class="label">Opombe</label>
             </div>
             <div class="field-body">
-                <input class="input" type="text" name="opombe_vrnitve">
+                <input class="input" type="text" name="opomba">
             </div>
         </div>
     </div>
