--- a/views/zacetna_stran.html
+++ b/views/zacetna_stran.html
@@ -33,6 +33,6 @@
     <div class="buttons are-large">
         <a href="/odtujen/" class="button is-primary">Odtujen</a>
         <button class="button">Postopek odpisa</button>
-        <a href="/odpis/" class="button">Odpis</a>
+        <a href="/odpis/" class="button is-primary">Odpis</a>
     </div>
 </div>
