--- a/views/odtujen.html
+++ b/views/odtujen.html
@@ -115,7 +115,7 @@
     %if not napaka:
         <div class="field is-horizontal">
             <div class="field-label is-normal">
-                <label class="label">Datum vrnitve</label>
+                <label class="label">Datum odtujitve</label>
             </div>
             <div class="field-body">
                 <div class="select">
@@ -130,14 +130,6 @@
                     <select id="select_leto" name="leto">
                     </select>
                 </div>
-            </div>
-        </div>
-        <div class="field is-horizontal">
-            <div class="field-label is-normal">
-                <label class="label">Opombe</label>
-            </div>
-            <div class="field-body">
-                <input class="input" type="text" name="opombe_vrnitve">
             </div>
         </div>
     </div>
