Dodan izpis vseh naprav v postopku odpisa

--- a/views/zacetna_stran.html
+++ b/views/zacetna_stran.html
@@ -32,7 +32,7 @@
 
     <div class="buttons are-large">
         <a href="/odtujen/" class="button is-primary">Odtujen</a>
-        <button class="button">Postopek odpisa</button>
+        <a href="/postopek-odpisa/" class="button is-primary">Postopek odpisa</a>
         <a href="/odpis/" class="button is-primary">Odpis</a>
     </div>
 </div>
