--- a/views/sprememba_podatka.html
+++ b/views/sprememba_podatka.html
@@ -10,3 +10,253 @@
     </div>
 </section>
 <a href="/" class="button is-primary is-large">Nazaj</a>
+
+%if napaka:
+<div class="modal is-active" id='pop_up'>
+    <div class="modal-background"></div>
+    <div class="modal-content">
+        <div class="column is-7 is-offset-3">
+            <div class="box">
+                <div class="content">
+                    <p>
+                    <strong>Ups!</strong>
+                    <br>
+                    {{napaka}}
+                    </p>
+                </div>
+                <div>
+                    <button class="button is-success" id='zapri'>Ok</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
+<script>
+    var pop_up = document.querySelector('#pop_up')
+    var zapri = document.querySelector('#zapri')
+    zapri.addEventListener('click', function(){
+        pop_up.classList.remove('is-active')
+    });
+</script>
+%end
+<form method="POST">
+
+    <div class="columns is-gapless is-vcentered">
+        <div class="column is-3">
+            <div class="field-label is-normal">
+                <label class="label">Inventarna št</label>
+            </div>
+            <div class="field-label is-normal">
+                <label class="label">Kaj spreminjaš</label>
+            </div>
+        </div>
+        <div class="column is-3">
+            <div class="field-body has-addons">
+                <div class="field has-addons">
+                    <p class="control">
+                        <a class="button is-static">
+                        74600
+                        </a>
+                    </p>
+                    <p class="control">
+                        <input class="input" type="text" name="inventarna" value="{{inventarna}}">
+                    </p>
+                </div>
+            </div>
+            <div class="select">
+                <select name="katera_sprememba">
+                    <option value='' selected disabled hidden></option>
+                    <option value='naziv'>Naziv</option>
+                    <option value='tip'>Tip</option>
+                    <option value='serijska'>Serijsko št</option>
+                    <option value='lokacija'>Lokacijo</option>
+                    <option value='stroskovno'>Stroskovno mesto</option>
+                    <option value='skrbnik'>Skrbnika</option>
+                    <option value='proizvajalec'>Proizvajalca</option>
+                    <option value='dobavitelj'>Dobavitelja</option>
+                    <option value='serviser'>Serviserja</option>
+                    <option value='RLP'>RLP</option>
+                    <option value='garancija'>Garancijo</option>
+                    <option value='dobava'>Datum dobave</option>
+                </select>
+            </div>
+        </div>
+        <div class="column">
+            <input class="button is-primary is-large" type="submit" value="Poizvej" name="iskanje_naprave"></input>
+        </div>
+    </div>
+
+%if inventarna:
+    <div class="column">
+        <div class="field is-horizontal">
+            <div class="field-label">
+                <label class="label">Naziv</label>
+            </div>
+            <div class="field-body">
+                <label class="label">{{naziv}}</label>
+            </div>
+        </div>
+    % if not napaka:
+        %if tip_spremembe == 1:
+        <div class="field is-horizontal">
+            <div class="field-label is-normal">
+                <label class="label">Tip</label>
+            </div>
+            <div class="field-body">
+                <div class="field is-horizontal">
+                    <div class="field is-normal"></div>
+                    <div class="field-body">
+                        <input class="input" type="text" name="tip">
+                    </div>
+    
+                    <div class="field-label is-normal">
+                        <label class="label">Serijska št</label>
+                    </div>
+                    <div class="field-body">
+                        <input class="input" type="text" name="serijska">
+                    </div>
+                </div>
+            </div>
+        </div>
+        %end
+        %if tip_spremembe == 2:
+            
+        %end
+        %if tip_spremembe == 3:
+        
+        %end
+        %if tip_spremembe == 4:
+        <div class="field is-horizontal">
+            <div class="field-label is-normal">
+                <label class="label">Nov datum</label>
+            </div>
+            <div class="field-body">
+                <div class="select">
+                    <select id="select_dan" name="dan">
+                    </select>
+                </div>
+                <div class="select">
+                    <select id="select_mesec" name="mesec">
+                    </select>
+                </div>
+                <div class="select">
+                    <select id="select_leto" name="leto">
+                    </select>
+                </div>
+            </div>
+        </div>
+        %end
+        %if tip_spremembe == 5:
+        
+        %end
+        %if tip_spremembe == 6:
+        <div class="field is-horizontal">
+            <div class="field-label">
+                <label class="label">Stara lokacija</label>
+            </div>
+            <div class="field-body">
+                <label class="label">{{podatki['lokacija']}}</label>
+            </div>
+        </div>
+
+        
+        <div class="field is-horizontal">
+            <div class="field-label is-normal">
+                <label class="label">Nova lokacija</label>
+            </div>
+            <div class="field-body">
+                <div class="select">
+                    <select id="select_dobavitelj" name="dobavitelj">
+                        <option value='' selected disabled hidden></option>
+                        %for podatek in podatki['tabela']:
+                        <option value="{{podatek}}">{{podatek}}</option>
+                        %end
+                    </select>
+                </div>
+                <button class="button is-primary" type="button" id="dodaj"><i class="far fa-plus-square fa-lg"></i></button>    
+            </div>
+        </div>
+        <div class="field is-horizontal">
+            <div class="field-label is-normal">
+                <label class="label">Nov datum</label>
+            </div>
+            <div class="field-body">
+                <div class="select">
+                    <select id="select_dan" name="dan">
+                    </select>
+                </div>
+                <div class="select">
+                    <select id="select_mesec" name="mesec">
+                    </select>
+                </div>
+                <div class="select">
+                    <select id="select_leto" name="leto">
+                    </select>
+                </div>
+            </div>
+        </div>
+        %end
+    </div>
+    <div class="column is-offset-6">
+        <input class="button is-primary is-large" type="submit" value="Potrdi" name="potrditev_sprememb"></input>
+    </div>
+
+    <script>
+        function posodobi_dneve(selectElement) {
+            trenutno_izbran_dan = selectElement.value;
+            var i, L = selectElement.options.length - 1;
+            for(i = L; i >= 0; i--) 
+                selectElement.remove(i);
+        
+            mesec = document.getElementById("select_mesec").value;
+            leto = document.getElementById("select_leto").value;
+
+            if (mesec == 2)
+                if (((leto % 4 == 0) && (leto % 100 != 0)) || (leto % 400 == 0))
+                    st_dni = 29;
+                else
+                    st_dni = 28;
+            else
+                if (["2", "4", "6", "9", "11"].includes(mesec))
+                    st_dni = 30;
+                else
+                    st_dni = 31;
+        
+            for (var i = 1; i <= st_dni; i++)
+                selectElement.options[selectElement.options.length] = new Option(i, i);
+            
+            selectElement.selectedIndex = trenutno_izbran_dan - 1
+        }
+
+        n = new Date();
+        leto = n.getFullYear();
+        mesec = n.getMonth() + 1;
+        dan = n.getDate();
+
+        select_dan = document.getElementById("select_dan");
+        select_mesec = document.getElementById("select_mesec");
+        select_leto = document.getElementById("select_leto");
+        
+        for (var i = 1; i <= 12; i++)
+            select_mesec.options[select_mesec.options.length] = new Option(i, i);
+
+        for (var i = 1980; i <= leto; i++)
+            select_leto.options[select_leto.options.length] = new Option(i, i);
+
+        select_mesec.selectedIndex = mesec - 1;
+        select_leto.value = leto;
+        posodobi_dneve(select_dan);
+        select_dan.selectedIndex = dan - 1;
+
+        select_mesec.onchange = function(){
+            posodobi_dneve(select_dan)
+        }
+        
+        select_leto.onchange = function(){
+            posodobi_dneve(select_dan)
+        }
+    </script>
+    %end
+%end
+</form>
